<resources>
    <string name="app_name">Jogja Holiday</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register"><u>Create an Account ?REGISTER</u>
    </string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="minimun">The Minimum Password is 6</string>
    <string name="EmailReq">Email Required</string>
    <string name="PassReq">Password Required</string>
    <string name="fail">Please Check again your Email and Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="help">Help</string>
    <string name="logout">LogOut</string>
    <string name="sign_up">Sign Up</string>
    <string name="english">English</string>
    <string name="Indonesia">Indonesia</string>
    <string name="keyword">keyword</string>
    <string name="title_activity_spesific">spesific</string>
</resources>
