<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:src="@drawable/jogjaholiday"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <EditText
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:id="@+id/etEmail"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/Email"
        android:textColor="@color/putih"
        android:background="@drawable/edit_text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
    <EditText
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:id="@+id/etPassword"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textColor="@color/putih"
        android:background="@drawable/edit_text"
        android:paddingLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/btnLogin"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:text="@string/login"
                    android:background="@drawable/edit_text"
                    android:textColor="@color/putih"
                    />
            </TableRow>
            <TableRow
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_width="match_parent">
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_marginTop="10dp">

                <Button

                    android:id="@+id/btnRegister"
                    android:text="@string/register"
                    android:background="@null"
                    android:textColor="@color/blue" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbprogressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>